# WARNING: This file is used only for development done on this addon.
# Be aware that dependencies used here might not match the ones used by
# the specific addon bundle set up on the AYON server. This file should
# be used only for local development and CI/CD purposes.

[tool.poetry]
name = "ayon-unreal"
version = "0.2.8"
description = "Unreal Engine Integration Addon for AYON"
authors = ["Ynput Team <team@ynput.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9.1,<3.12"

[tool.poetry.dev-dependencies]
# linting dependencies
ruff = "^0.3.3"
pre-commit = "^3.6.2"
codespell = "^2.2.6"
tomlkit = "^0.13.2"
requests = "^2.32.3"
mkdocs-material = "^9.6.7"
mkdocs-autoapi = "^0.4.0"
mkdocstrings-python = "^1.16.2"
mkdocstrings-shell = "^1.0.2"
mkdocs-minify-plugin = "^0.8.0"
markdown-checklist = "^0.4.4"
mdx-gh-links = "^0.4"
pymdown-extensions = "^10.14.3"
mike = "^2.1.3"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "vendor",
    "generated",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.codespell]
# Ignore words that are not in the dictionary.
ignore-words-list = "ayon,ynput"

skip = "./.*,./package/*,*/vendor/*"
count = true
quiet-level = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
